# MetasequoiaVoiceInput

./: .clangd  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg-configuration.json  vcpkg.json
scripts/: llaunch-release.ps1  lrun-release.ps1  prepare_env.py
scripts/config_files/: .clangd  CMakePresets.json
src/: audio_capture.cpp  audio_capture.h  cloud_stt_worker.cpp  cloud_stt_worker.h  main.cpp  mvi_utils.cpp  mvi_utils.h  send_input.cpp  send_input.h  silero_vad.cpp  silero_vad.h  stt_service.h  vad.cpp  vad.h  wav_writer.h  whisper_worker.cpp  whisper_worker.h
